[feat] Controller, 테스트 코드 작성

--- a/build.gradle
+++ b/build.gradle
@@ -35,8 +35,9 @@ repositories {
 dependencies {      // 프로젝트 개발에 필요한 의존성들을 선언한다.
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-    compileOnly('org.springframework.boot:spring-boot-starter-web')
-    testCompileOnly('org.springframework.boot:spring-boot-starter-test')
+    implementation('org.springframework.boot:spring-boot-starter-web')
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
+    implementation('org.projectlombok:lombok')
 }
 
 test {
