--- a/build.gradle
+++ b/build.gradle
@@ -34,10 +34,13 @@ repositories {
 
 dependencies {      // 프로젝트 개발에 필요한 의존성들을 선언한다.
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testImplementation 'junit:junit:4.13.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     implementation('org.springframework.boot:spring-boot-starter-web')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     implementation('org.projectlombok:lombok')
+    implementation('org.springframework.boot:spring-boot-starter-data-jpa')     // spring data jpa : spring data jpa 추상화 라이브러리
+    implementation('com.h2database:h2')                                         // h2 데이터베이스 : 인메모리 관계형 데이터베이스
 }
 
 test {
