--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,4 @@
-# ??? ??? ??? ?? ?? ??
 spring.jpa.show-sql=true
-
-# ???? ?? ??? H2->MySql ???? ??
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-
-# H2? ?? ???? ?? ? ?? ??? ???
 spring.h2.console.enabled=true
+spring.profiles.include=oauth
