[fix] test build 오류 수정

--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import jdk.internal.dynalink.linker.LinkerServices
+
 // 프로젝트의 플러그인 의존성 관리를 위한 설정
 buildscript {
     ext{        //전역변수 설정
@@ -34,22 +36,23 @@ repositories {
 }
 
 dependencies {      // 프로젝트 개발에 필요한 의존성들을 선언한다.
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testImplementation 'junit:junit:4.13.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     implementation('org.springframework.boot:spring-boot-starter-web')
-    testImplementation('org.springframework.boot:spring-boot-starter-test')
-//    implementation('org.projectlombok:lombok:0.9.2')
     implementation ('org.projectlombok:lombok:1.18.24')
     annotationProcessor ('org.projectlombok:lombok:1.18.24')
-
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')     // spring data jpa : spring data jpa 추상화 라이브러리
-    implementation('com.h2database:h2')                                         // h2 데이터베이스 : 인메모리 관계형 데이터베이스
     implementation('org.springframework.boot:spring-boot-starter-mustache')
+    implementation('com.h2database:h2')                                         // h2 데이터베이스 : 인메모리 관계형 데이터베이스
+
     implementation('org.springframework.boot:spring-boot-starter-oauth2-client')
     implementation('org.springframework.session:spring-session-jdbc')
-    implementation('org.springframework.security:spring-security-test')
-//    implementation('mysql:mysql-connector-java:10.6.14')
+
+    implementation("org.mariadb.jdbc:mariadb-java-client")
+
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
+//    implementation("org.springframework.security:spring-security-test")
+    testImplementation("org.springframework.security:spring-security-test")
+    testImplementation ('org.junit.jupiter:junit-jupiter-api')
+    testRuntimeOnly ('org.junit.jupiter:junit-jupiter-engine')
 }
 
 test {
