--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,14 @@
 language: java
 jdk:
-  -openjdk8
+  - openjdk8
 
 branches:
   only:
     - main
+
+# 빌드 전에 gradlew의 권한 추가
+before_install:
+  - chmod +x gradlew
 
 # Travis CI 서버의 Home
 cache:
