--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -5,13 +5,13 @@
 # This workflow will build a package using Gradle and then publish it to GitHub packages when a release is created
 # For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#Publishing-using-gradle
 
-name: deploy     # (0) GitHub Action에서 보여질 이름을 지정합니다.
+name: Springboot-AWS-Webservice     # (0) GitHub Action에서 보여질 이름을 지정합니다.
 
 on:
-  release:
-    types: [push]  # (1) push시 자동으로 실행됩니다.
+  # release:
+  #   types: [push]  # (1) push시 자동으로 실행됩니다.
   push:
-    branches: [main] # (2) main 브랜치에서 동작합니다.
+    branches: 'main' # (2) main 브랜치에서 동작합니다.
   workflow_dispatch: # (3) 수동으로도 실행이 가능힙니다.
 
 jobs:
@@ -28,13 +28,13 @@ jobs:
     - name: Set up JDK 1.8
       uses: actions/setup-java@v3  # (6) 
       with:
-        java-version: '1.8'
+        java-version: '8'
         distribution: 'temurin'
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
         settings-path: ${{ github.workspace }} # location for the settings.xml file
     
     - name: Grant execute permission for gradlew
-      run: chmod +x ./gradlew # (7)
+      run: chmod +x gradlew # (7)
       shell: bash
       
     - name: Build with Gradle
