--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.h2.console.enabled=true
 spring.profiles.include=oauth
 spring.session.store-type=jdbc
 #serverTimezone=KST&characterEncoding=UTF-8
+spring.pid.file=/home/ec2-user/app/step2/springboot-aws-websevice.pid
