--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,3 @@
-import jdk.internal.dynalink.linker.LinkerServices
-
 // 프로젝트의 플러그인 의존성 관리를 위한 설정
 buildscript {
     ext{        //전역변수 설정
@@ -7,7 +5,7 @@ buildscript {
     }
     repositories {      // 각종 라이브러리들의 의존성을 어떤 원격 저장소에서 받을지 정함
         mavenCentral()  // 복잡
-        jcenter()       //더 간단
+//        jcenter()       //더 간단 -> 'jcenter' is deprecated
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
@@ -28,7 +26,7 @@ apply plugin: 'io.spring.dependency-management'
 //}
 
 group 'org.example'
-version '1.0-SNAPSHOT'
+version '1.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
 repositories {
