--- a/appspec.yml
+++ b/appspec.yml
@@ -10,7 +10,7 @@ permissions:
     owner: ec2-user
     group: ec2-user
 hooks:
-  AfterInsall:
+  AfterInstall:
     - location: stop.sh     # nginx와 연결되어 있지 않은 스프링 부트를 종료한다.
       timeout: 60
       runas: ec2-user
